2010.08.25, Version 1.2.0

* Paginators can now be oriented vertically as well as horizontally.
* Resizing of paginators now functions as intended.
* Added an offsets option to allow the addition of space for controls etc.
* Improved documentation.

2010.08.25, Version 1.1.0

* Added push, pop, unshift and shift methods to add and remove elements from
  the paginator.

2010.04.07, Version 1.0.0

* A paginator that scales with the browser viewport.