@@ -33,6 +33,7 @@
             
             pager = new ScalingPaginator(container, {
                 direction: 'vertical',
+                fitToViewport: true,
                 offsets:   {
                     top:    160,
                     bottom: 160
