@@ -3,6 +3,8 @@
 * Paginators can now be oriented vertically as well as horizontally.
 * Resizing of paginators now functions as intended.
 * Added an offsets option to allow the addition of space for controls etc.
+* Added fitToViewport option: paginators will fit their containers by default
+  and the viewport if the option is set.
 * Improved documentation.
 
 2010.08.25, Version 1.1.0
